--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "pep_portfolio",
   "version": "5.0.7",
   "scripts": {
+    "build": "gulp",
     "start": "node_modules/.bin/gulp watch"
   },
   "description": "Pep del Baño Portfolio",
@@ -20,12 +21,10 @@
     "@fortawesome/fontawesome-free": "5.9.0",
     "bootstrap": "4.3.1",
     "jquery": "3.4.1",
-    "jquery.easing": "^1.4.1"
-  },
-  "devDependencies": {
+    "jquery.easing": "^1.4.1",
     "browser-sync": "2.26.7",
     "del": "4.1.1",
-    "gulp": "4.0.2",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "6.1.0",
     "gulp-clean-css": "4.2.0",
     "gulp-header": "2.0.7",
